# OmicsQC

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: example.fasta  example.fastq
omicsqc/: __init__.py  __main__.py  cli.py  metrics.py  parsers.py  plots.py  report.py  utils.py
tests/: test_cli.py  test_metrics.py  test_parsers.py
