[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omicsqc"
version = "0.1.0"
description = "Lightweight quality-control toolkit for FASTQ and FASTA files."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Amit Shenoy" }]
keywords = ["bioinformatics", "qc", "fastq", "fasta", "sequencing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.5",
    "pandas>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
omicsqc = "omicsqc.cli:main"

[tool.setuptools.packages.find]
include = ["omicsqc*"]
exclude = ["tests*", "examples*", "outputs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
